# onemarinex-backend

./: .env  .gitignore  README.md  alembic.ini  check_bookings.py  check_schema.py  create_tables.py  pyproject.toml  requirements.txt  seed_hotels.py  seed_pubs.py  seed_restaurants.py  setup_structure.sh  test_connection.py  test_create_booking.py  test_registration_e2e.py  verify_endpoints.py  verify_models.py
alembic/: env.py
alembic/versions/: 0befe5cfff10_add_mobile_number_to_users_and_create_.py  56eefdec0624_add_port_vessel_to_shore_pass.py  8f4a861acdd0_create_shore_passes_table.py
app/: main.py
app/api/v1/: deps.py  registration.py  routes_auth.py  routes_contact.py  routes_crew.py  routes_hotels.py  routes_orders.py  routes_pubs.py  routes_quotes.py  routes_restaurants.py  routes_rfqs.py  routes_users.py  routes_vendor.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/db/models/: cab_booking.py  cab_pricing.py  client_profile.py  crew_profile.py  file_asset.py  hotels.py  order.py  order_event.py  password_reset.py  pub.py  restaurant.py  rfq.py  rfq_quote.py  shore_pass.py  user.py  vendor_profile.py
app/services/: auth.py  auth_services.py  email.py  rfq_service.ts  storage.py
onemarinex_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
